# RAG-Assistance

./: .env.example  .gitignore  Dockerfile  EVALUATION.md  Makefile  README.md  SECURITY.md  docker-compose.yml  how to 2.txt  how to.txt  prompt.txt  pyproject.toml  requirements-dev.txt  requirements.txt  review prompt.txt  setup.txt  tree.js  tree.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: admin.py  chat.py  health.py  ingest.py  search.py
app/core/: chunker.py  citations.py  deduplication.py  embeddings.py  generator.py  language.py  reranker.py  retrieval.py
app/ingest/: pipeline.py  preprocessor.py  watcher.py
app/ingest/parsers/: __init__.py  base.py  csv.py  docx.py  pdf.py  text.py
app/storage/: cache.py  document_store.py  models.py  vector_store.py
app/ui/: routes.py
app/ui/static/css/: main.css
app/ui/static/js/: app.js
app/ui/templates/: base.html  chat.html
app/ui/templates/components/: message.html  source_card.html
app/utils/: logging.py  paths.py  tokens.py
cli/: main.py  utils.py
cli/commands/: admin.py  chat.py  ingest.py  search.py
eval/: metrics.py  report.py  runner.py
eval/datasets/: sample_qa.json
scripts/: download_models.py  download_models_simple.py  migrate_db.py  setup.sh
tests/: conftest.py
tests/e2e/: test_chat_flow.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_chunker.py  test_deduplication.py  test_embeddings.py  test_parsers.py  test_retrieval.py
